--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,23 @@
+buildscript {
+
+    ext {
+        kotlin_version = "1.6.10"
+        coroutines_version = "1.6.1"
+        nav_version = "2.5.1"
+        okhttp_version = "4.9.3"
+        retrofit_version = "2.9.0"
+        hilt_version = "2.43.2"
+    }
+
+    dependencies {
+//        classpath "com.android.tools.build:gradle:7.2.2"
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+    }
+
+}
+
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
@@ -5,14 +25,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
-ext.kotlin_version = "1.6.10"
-
-    ext.coroutines_version = "1.6.1"
-    ext.nav_version = "2.5.1"
-
-    //  define OkHttp and Retrofit versions
-    ext.okhttp_version = "4.9.3"
-    ext.retrofit_version = "2.9.0"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
